[Extensions] Allow overriding a nested options page for opening a new instance

If there is an existing chrome://extensions page open, it should be able to be
overridden to show an extension's options page if that options page opens in
a view in the chrome://extensions page.

BUG=595253

Review URL: https://codereview.chromium.org/1805013005

Cr-Commit-Position: refs/heads/master@{#381555}

Former-commit-id: 6ef722eae199b14ba8b6670568647b0905099442